force-app/main/default/objects/Blog_Post__c/Blog_Post__c.object-meta.xml
<CustomObject>
    <description>Posts for the bean blog. Created from the GDM Explore App.</description>
    <label>Blog Post</label>
    <nameField>
        <label>Blog Post Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blog Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>