force-app/main/default/objects/Blog_Post__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>