force-app/main/default/objects/Blog_Post__c/fields/Plot_Location__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Location</label>
    <referenceTo>Plot_Location__c</referenceTo>
    <relationshipLabel>Bean Blog Posts</relationshipLabel>
    <relationshipName>Blog_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>