force-app/main/default/objects/Blog_Post__c/fields/Plot_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location_State__c</fullName>
    <formula>Plot_Location__r.Location__r.State_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Location State</label>
    <type>Text</type>
</CustomField>