force-app/main/default/objects/Blog_Post__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>Blog Posts</relationshipLabel>
    <relationshipName>Blog_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>