force-app/main/default/objects/Blog_Post__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>