force-app/main/default/objects/Blog_Post__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Plot_Location_Name__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Status__c</columns>
    <columns>Topic__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Plot_Location__c</columns>
    <columns>Comments__c</columns>
    <columns>Assets__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>